{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "69b46700-2895-4547-887f-b7d378b579a0",
            "actions": [
                {
                    "name": "MoveAction",
                    "type": "Value",
                    "id": "e63a7aae-b327-48b9-b46e-6ca83165417b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpAction",
                    "type": "Button",
                    "id": "02b3657f-ed84-4081-ab1e-eaa20f0db9b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d1442fdb-d4d2-41a3-81e9-6db41610e386",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "50ab0330-78cc-42f0-8e96-b5a4e7a1cc12",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f59aaef4-5819-459f-9563-a40e8953d684",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ab49a82f-9d6f-4626-90a9-e2abbe277fb6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c9db3a79-9b04-4229-a543-be3f42d398b9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}